@@ -1,42 +1,54 @@
 package me.eren.skcheese.elements;
 
-import ch.njol.skript.Skript;
+import ch.njol.skript.doc.Description;
+import ch.njol.skript.doc.Example;
+import ch.njol.skript.doc.Name;
+import ch.njol.skript.doc.Since;
 import ch.njol.skript.lang.Expression;
-import ch.njol.skript.lang.ExpressionType;
-import ch.njol.skript.lang.SkriptParser;
+import ch.njol.skript.lang.SkriptParser.ParseResult;
 import ch.njol.skript.lang.util.SimpleExpression;
 import ch.njol.util.Kleenean;
 import me.eren.skcheese.SkCheese;
 import org.bukkit.event.Event;
 import org.jetbrains.annotations.NotNull;
+import org.skriptlang.skript.registration.SyntaxRegistry;
 
+import static org.skriptlang.skript.registration.DefaultSyntaxInfos.Expression.builder;
+
+@Name("Binary and Hexadecimal Numbers")
+@Description("Allows the use of hexadecimal and binary formats to represent literal numbers.")
+@Example("set {_hex} to 0xFF # 255")
+@Example("set {_bin} to 0b1010 # 10")
+@Since("1.0.0")
 public class ExprNumber extends SimpleExpression<Number> {
 
-    private String regex;
-    private int pattern;
-
-    static {
+    public static void register(SyntaxRegistry registry) {
         if (SkCheese.isSyntaxEnabled("binary-and-hex-numbers"))
-            Skript.registerExpression(
-                ExprNumber.class,
-                Number.class,
-                ExpressionType.SIMPLE,
-                "0(x|X)<[A-Fa-f0-9]+>",
-                "0(b|B)<[0-1]+>"
-        );
+            registry.register(SyntaxRegistry.EXPRESSION,
+                    builder(ExprNumber.class, Number.class)
+                            .addPatterns(
+                                    "0(x|X)<[A-Fa-f0-9]+>",
+                                    "0(b|B)<[0-1]+>"
+                            ).build()
+            );
     }
 
+    private String number;
+    private int pattern;
+
     @Override
-    public boolean init(Expression<?> @NotNull [] expressions, int i, @NotNull Kleenean kleenean, SkriptParser.@NotNull ParseResult parseResult) {
-        pattern = i;
-        regex = parseResult.regexes.get(0).group();
+    public boolean init(Expression<?> @NotNull [] expressions, int matchedPattern, @NotNull Kleenean kleenean, ParseResult parseResult) {
+        pattern = matchedPattern;
+        number = parseResult.regexes.getFirst().group();
         return true;
     }
 
     @Override
     protected Number @NotNull [] get(@NotNull Event event) {
-        if (regex == null) return new Number[0];
-        Number result = Integer.parseInt(regex, pattern == 0 ? 16 : 2);
+        if (number == null) {
+            return new Number[0];
+        }
+        Number result = Integer.parseInt(number, pattern == 0 ? 16 : 2);
         return new Number[]{ result };
     }
 
@@ -51,9 +63,8 @@ public class ExprNumber extends SimpleExpression<Number> {
     }
 
     @Override
-    public @NotNull String toString(Event event, boolean b) {
-        return (pattern == 0 ? "hexadecimal " : "binary ") + regex;
+    public @NotNull String toString(Event event, boolean debug) {
+        return (pattern == 0 ? "hexadecimal " : "binary ") + number;
     }
-
 
 }
